--- a/Home/View/default/Member/info.html
+++ b/Home/View/default/Member/info.html
@@ -82,7 +82,7 @@ function checksubmit()
             	 <div class="reg" style="padding: 35px 0 35px 70px;">
 <form name="form1" action="" method="post" enctype="multipart/form-data" onsubmit="return checksubmit()">
 <ul>
-<li class="text"><span>头像</span><img height="127px" width="100px" src="{$info.avatar}" /></li>
+<li class="text"><span>头像</span><img height="127px" width="100px" src="__ROOT__{$info.avatar}" /></li>
 <li class="text"><input type="file" name="photo" /></li>
 <li class="text"><span>用户名</span><input name="uname" type="text" value="{$info.uname}" disabled/></li>
 <li class="text"><span>姓名</span><input id=" " name="truename" type="text" value="{$info.truename}" /><b style="color:#F00">*</b></li>
