--- a/Home/View/default/Member/menu.html
+++ b/Home/View/default/Member/menu.html
@@ -31,7 +31,13 @@
 <dd><a href="{:U('Project/add')}">·发布培训</a></dd>
 </dl>
 <a href="{:U('Member/sendmessage')}"><li>发布站内信</li></a>
-<a href="{:U('Member/tongji')}"><li>统计</li></a>
+<a  onClick='showHide("items2_4_0")' ><li>统计</li></a>
+
+<dl id="items2_4_0">
+<dd><a href="{:U('Member/tongji')}">.会员统计</a></dd>
+<dd><a href="{:U('Member/tongjiweb')}">·站点统计</a></dd>
+</dl>
+
 <a href="{:U('Index/exam')}"><li>考试管理</li></a>
 <a onClick='showHide("items2_5")'><li>网站信息管理</li></a>
 <dl id="items2_5" <php>if(CONTROLLER_NAME == 'News'){</php><php>}else{</php>style="display:none;"<php>}</php>>
