--- a/Home/View/default/index/about.html
+++ b/Home/View/default/index/about.html
@@ -4,9 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>医师协会</title>
 <link href="__PUBLIC__/Home/css/style.css" type="text/css" rel="stylesheet" />
-<script>
-
-</script>
 </head>
 
 <body>
@@ -28,50 +25,55 @@
 <div class="banner"></div>
 <div id="nav">
 	<div class="nav">
-      <ul>
-        	<include file="Public:menu" />
+    <ul>
+       <include file="Public:menu" />
       </ul>
     </div>
 </div>
 <div id="centent">
 	<div class="ny_con">
-    	<div class="gonggaot"><img src="__PUBLIC__/Home/images/laba.jpg" width="20" height="39" class="left mr10" /><php>echo gonggao();</php></div>
+    	<div class="gonggaot"><img src="__PUBLIC__/Home/images/laba.jpg" width="20" height="39" class="left mr10" />
+    	<php>echo gonggao();</php></div>
         <div class="blank"></div>
 <div class="ny_L">
         	<div class="ny_Lbox mb10">
-            	<h3>菜单</h3>
+            	<h3>快速导航</h3>
                 <ul>
-                	<include file="Member:menu" />
+                	<include file="Public:leftmenu" />
                 </ul>
             </div>
             
-
+<div class="ny_Lbox2 mb10">
+            	<h3>行业动态</h3>
+                <ul>
+                <volist name="other" id="otherlist">
+                	<li>▪&nbsp;&nbsp;<a href="{:U('Index/article',array('id'=>$otherlist['id']))}">{$otherlist.title}</a></li>
+                	</volist>
+                </ul>
+            </div>
         	
         </div>
         <div class="ny_R right">
-
+        <h5>{$data.title}</h5>
         	<div  class="neirong">
-
-				<form method="post">
-					type: <select name="paytype"><option value="alipay">支付宝</option>
-					<option value="unionpay">银联</option>
-					<option value="tenpay">财付通</option>
-
-				</select>
-					money:<input type="text" name="money" size="10" value="{$money}"/>
-
-                <input type="submit" /> <input type="button" onclick="history.back();" value="return"/>
-				</form>
-
-</div>
+            	{$data.content}
+            </div>
+           
             
 
 
-            </div>
         </div><div class="clear"></div>
         <div class="blank"></div>
         
-  
+        <div class="yqlj">
+     	<h2>友情链接</h2>
+        <ul>
+         <volist name="link" id="linklist">
+        <li><a href="{$linklist.link}" target="_blank">{$linklist.title}</a></li>
+        </volist>
+        </ul>
+     </div>
+     <div class="blank"></div>
   </div>
     
 </div>
