--- a/Home/View/default/Project/editsonitem.html
+++ b/Home/View/default/Project/editsonitem.html
@@ -47,7 +47,7 @@
         	<div  class="neirong">
             	 <div class="reg" style="padding: 35px 0 35px 70px;">
 <form action="" method="post" enctype="multipart/form-data">
-<input type="hidden" name="action" value="add" />
+<input type="hidden" name="action" value="editsave" /> <!--add replace by editsave-->
 <input type="hidden" name="pid" value="{$pid}" />
 <ul>
 <li class="text"><span>培训标题</span><input name="title" type="text" value="{$fdata.title}"/><b style="color:#F00">*</b></li>
