--- a/Admin/View/default/Member/edit.html
+++ b/Admin/View/default/Member/edit.html
@@ -74,6 +74,11 @@ function ReSetPwd(id)
 <td>(用户名只能使用英文字母或数字，长度4到16位！)</td>
 </tr>
 <tr>
+	<td width="9%" height="34" align="right">真實姓名:</td>
+	<td align="left"><input name="truename" type="text" class="Input_W675" size="50" value="{$data.truename}">&nbsp;<span style="color:red" >*</span></td>
+</tr>
+
+<tr>
 <td width="9%" height="34" align="right">性别:</td>
 <td align="left">
 <select name="sex">
