--- a/Admin/View/default/Member/index.html
+++ b/Admin/View/default/Member/index.html
@@ -42,6 +42,7 @@ function Search(){
   <tr id="all_table_top">
     <td nowrap='nowrap'>id</td>
     <td nowrap='nowrap'>昵称</td>
+    <td nowrap='nowrap'>真實姓名</td>
     <td nowrap='nowrap'>账号类型</td>
 	<td nowrap='nowrap'>联系电话</td>
 	<td nowrap='nowrap'>邮件</td>
@@ -55,6 +56,7 @@ function Search(){
 <tr>
 <td nowrap='nowrap'>{$user.id}</td>
 <td nowrap='nowrap'>{$user.uname}</td>
+<td nowrap='nowrap'>{$user.truename}</td>
 <td nowrap='nowrap'>{$user.id|userType=###}</td>
 <td nowrap='nowrap'>{$user.phone} </td>
 <td nowrap='nowrap'>{$user.email}</td>
