--- a/Home/View/default/Member/menu.html
+++ b/Home/View/default/Member/menu.html
@@ -25,22 +25,22 @@
 <dd><a href="{:U('Member/adduser',array('type'=>'4'))}">·新增</a></dd>
 <dd><a href="{:U('Member/fadduser')}">·批量新增</a></dd>
 </dl>
-<a onClick='showHide("items2_4")'><li>培训管理</li></a>
+	<a onClick='showHide("items2_4")'><li>培训管理</li></a>
 <dl id="items2_4" <php>if(CONTROLLER_NAME == 'Project'){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Project/index')}">·培训项目</a></dd>
 <dd><a href="{:U('Project/add')}">·发布培训</a></dd>
 </dl>
 <a href="{:U('Member/sendmessage')}"><li>发布站内信</li></a>
-<a  onClick='showHide("items2_4_0")' ><li>统计</li></a>
+<a  onClick='showHide("items2_5")' ><li>统计</li></a>
 
-<dl id="items2_4_0">
+<dl id="items2_5" <php>if(CONTROLLER_NAME == 'Project'){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Member/tongji')}">.会员统计</a></dd>
 <dd><a href="{:U('Member/tongjiweb')}">·站点统计</a></dd>
 </dl>
 
 <a href="{:U('Index/exam')}"><li>考试管理</li></a>
-<a onClick='showHide("items2_5")'><li>网站信息管理</li></a>
-<dl id="items2_5" <php>if(CONTROLLER_NAME == 'News'){</php><php>}else{</php>style="display:none;"<php>}</php>>
+<a onClick='showHide("items2_6")'><li>网站信息管理</li></a>
+<dl id="items2_6" <php>if(CONTROLLER_NAME == 'News'){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('News/index')}">·信息列表</a></dd>
 <dd><a href="{:U('News/newsadd')}">·新增信息</a></dd>
 </dl>
@@ -51,8 +51,8 @@
 <dd><a href="{:U('Member/articlestatus')}">·公告审核</a></dd>
 </dl>
 <php>}else if(session('groupid') == 2){</php>
-<a onClick='showHide("items2_3")'><li>账号管理</li></a>
-<dl id="items2_3" <php>if($_GET['type'] == 4){</php><php>}else{</php>style="display:none;"<php>}</php>>
+<a onClick='showHide("items2_8")'><li>账号管理</li></a>
+<dl id="items2_8" <php>if($_GET['type'] == 4){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Member/users',array('type'=>'4'))}">·管理</a></dd>
 <dd><a href="{:U('Member/adduser',array('type'=>'4'))}">·新增</a></dd>
 <dd><a href="{:U('Member/fadduser')}">·批量新增</a></dd>
@@ -61,22 +61,22 @@
 <a href="{:U('Member/sendmessage')}"><li>发布站内信</li></a>
 <a href="{:U('Member/tongji')}"><li>统计</li></a>
 <a href="{:U('Index/exam')}"><li>考试管理</li></a>
-<a onClick='showHide("items2_7")'><li>公告管理</li></a>
-<dl id="items2_7" <php>if(CONTROLLER_NAME == 'Member' && (ACTION_NAME == 'article' || ACTION_NAME == 'articleadd')){</php><php>}else{</php>style="display:none;"<php>}</php>>
+<a onClick='showHide("items2_9")'><li>公告管理</li></a>
+<dl id="items2_9" <php>if(CONTROLLER_NAME == 'Member' && (ACTION_NAME == 'article' || ACTION_NAME == 'articleadd')){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Member/article')}">·管理</a></dd>
 <dd><a href="{:U('Member/articleadd')}">·新增公告</a></dd>
 </dl>
 <php>}else if(session('groupid') == 3){</php>
-<a onClick='showHide("items2_3")'><li>个人账号管理</li></a>
-<dl id="items2_3" <php>if($_GET['type'] == 4){</php><php>}else{</php>style="display:none;"<php>}</php>>
+<a onClick='showHide("items2_10")'><li>个人账号管理</li></a>
+<dl id="items2_10" <php>if($_GET['type'] == 4){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Member/users',array('type'=>'4'))}">·管理</a></dd>
 <dd><a href="{:U('Member/adduser',array('type'=>'4'))}">·新增</a></dd>
 <dd><a href="{:U('Member/fadduser')}">·批量新增</a></dd>
 </dl>
 <a href="{:U('Member/tongji')}"><li>统计</li></a>
 <a href="{:U('Index/exam')}"><li>考试管理</li></a>
-<a onClick='showHide("items2_7")'><li>公告管理</li></a>
-<dl id="items2_7" <php>if(CONTROLLER_NAME == 'Member' && (ACTION_NAME == 'article' || ACTION_NAME == 'articleadd')){</php><php>}else{</php>style="display:none;"<php>}</php>>
+<a onClick='showHide("items2_11")'><li>公告管理</li></a>
+<dl id="items2_11" <php>if(CONTROLLER_NAME == 'Member' && (ACTION_NAME == 'article' || ACTION_NAME == 'articleadd')){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Member/article')}">·管理</a></dd>
 <dd><a href="{:U('Member/articleadd')}">·新增公告</a></dd>
 </dl>
