--- a/Home/View/default/Member/menu.html
+++ b/Home/View/default/Member/menu.html
@@ -5,7 +5,18 @@
 <dd><a href="{:U('Member/inputbox')}">收件箱</a></dd>
 </dl>
 <!-- <a href="{:U('Member/collect')}"><li>我的收藏</li></a> -->
+
+
+
+
 <php>if(session('groupid') == 1){</php>
+
+<a onClick='showHide("items2_0")'><li>幻灯片管理</li></a>
+<dl id='items2_0' <php>if(CONTROLLER_NAME == 'Member' && (ACTION_NAME == 'flash' || ACTION_NAME == 'flashadd' || ACTION_NAME == 'flashedit')){</php><php>}else{</php>style="display:none;"<php>}</php>>
+<dd><a href="{:U('Member/flash')}">·管理</a></dd>
+<dd><a href="{:U('Member/flashadd')}">·新增</a></dd>
+</dl>
+
 <a onClick='showHide("items2_1")'><li>分会账号管理</li></a>
 <dl id='items2_1' <php>if($_GET['type'] == 2){</php><php>}else{</php>style="display:none;"<php>}</php>>
 <dd><a href="{:U('Member/users',array('type'=>'2'))}">·管理</a></dd>
