--- a/Home/View/default/Member/sendmessage.html
+++ b/Home/View/default/Member/sendmessage.html
@@ -5,6 +5,7 @@
 <title>医师协会</title>
 <link href="__PUBLIC__/Home/css/style.css" type="text/css" rel="stylesheet" />
 <script src="__PUBLIC__/media/jquery.js"></script>
+	<script type="text/javascript" src="__PUBLIC__/Js/showdialog.js"></script>
 </head>
 
 <body>
@@ -84,6 +85,7 @@ function fchange(id){
 	}
 }
 function showmodal(){
+
 	 var ret = window.showModalDialog("{:U('Member/selectuser')}",null,"dialogWidth:800px;dialogHeight:500px;help:no;status:no");
 	// if(ret == ''){
 	//	 alert('未选择用户');
