--- a/Home/View/default/Pay/orderindex.html
+++ b/Home/View/default/Pay/orderindex.html
@@ -4,6 +4,23 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>医师协会</title>
 <link href="__PUBLIC__/Home/css/style.css" type="text/css" rel="stylesheet" />
+    <!–[if lt IE9]>
+    <script src="__ROOT__/exam/app/core/styles/js/html5.js"></script>
+    <![endif]–>
+    <!-- Le styles -->
+    <link href="__ROOT__/exam/app/core/styles/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="__ROOT__/exam/app/core/styles/css/layoutit.css" rel="stylesheet">
+    <link href="__ROOT__/exam/app/core/styles/css/plugin.css" rel="stylesheet">
+    <!--
+    <script type="text/javascript" src="app/core/styles/js/jquery.min.js"></script>
+    -->
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="__ROOT__/exam/app/core/styles/js/html5shiv.js"></script>
+    <![endif]-->
+
+    <script type="text/javascript" src="__ROOT__/exam/app/core/styles/js/bootstrap.min.js"></script>
+
 <script>
 
 </script>
@@ -53,21 +70,21 @@
         	<div  class="neirong">
 
 				<form method="post">
-					type: <select name="paytype"><option value="alipay">支付宝</option>
+					類型:<select name="paytype"><option value="alipay">支付宝</option>
 					<option value="unionpay">银联</option>
 					<option value="tenpay">财付通</option>
 
 				</select><br/>
 
-					描述:<input type="text"  name="ordertitle" size="20" value="{$order['ordertitle']}"/><br/>
+                    描述:<input type="text"  name="ordertitle" size="20" value="{$order['ordertitle']}"/><br/>
 
-					金額:<input type="text" name="orderprice" size="10" value="{$order['orderprice']}"/><br/>
+                    金額:<input type="text" name="orderprice" size="10" value="{$order['orderprice']}"/><br/>
 
-                <input type="submit" /> <br/><input type="button" onclick="history.back();" value="return"/>
+                <button class="btn"  type="submit" >充值</button> <button class="btn"  type="button" onclick="history.back();" >返回</button>
 				</form>
 
 </div>
-            
+
 
 
             </div>
