--- a/Home/View/default/Member/articlestatus.html
+++ b/Home/View/default/Member/articlestatus.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>医师协会</title>
 <link href="__PUBLIC__/Home/css/style.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="__PUBLIC__/Js/showdialog.js"></script>
 <script>
 function View(id)
 {
