--- a/Home/View/default/Member/articlestatus.html
+++ b/Home/View/default/Member/articlestatus.html
@@ -18,7 +18,7 @@ function Edit(id)
 	if (confirm("确定驳回该公告？请慎重操作！"))
 	{
 		var ret = window.showModalDialog("{:U('Member/bohui')}/id/"+id,null,"dialogWidth:800px;dialogHeight:500px;help:no;status:no");
-		 alert(ret);
+		 //alert(ret);
 		 window.location.href=window.location.href;
 	}
 }
